--- a/codecourseslist/templates/base.html
+++ b/codecourseslist/templates/base.html
@@ -2,15 +2,36 @@
 
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Code Courses List</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel='stylesheet' type='text/css' media='screen' href='{% static "css/style.css" %}'>
-    <script src='main.js'></script>
+
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Roboto&display=swap" rel="stylesheet">
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </head>
+<div class="container">
+    <nav>
+        <div class="nav-wrapper">
+            <a class="brand-logo">CodeCourses List</a>
+            <ul id="nav-mobile" class="left">
+                <li><a href="/">Home</a></li>
+            </ul>
+        </div>
+    </nav>
+</div>
+<div class="container">
+    <h2>What do you want to search?</h2>
+
+</div>
 <body>
     <h2>Testing</h2>
 </body>
+
 </html>
