--- a/codecourseslist/templates/base.html
+++ b/codecourseslist/templates/base.html
@@ -1,37 +1,66 @@
 {% load static %}
 
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Code Courses List</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link rel='stylesheet' type='text/css' media='screen' href='{% static "css/style.css" %}'>
+	<meta charset="utf-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<title>Code Courses List</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <link href="https://fonts.googleapis.com/css?family=Montserrat|Roboto&display=swap" rel="stylesheet">
-    <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+	<link rel="stylesheet" type="text/css" media="screen" href='{% static "css/style.css" %}' />
+	<!-- Compiled and minified CSS -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
+	<link href="https://fonts.googleapis.com/css?family=Montserrat|Roboto&display=swap" rel="stylesheet" />
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<div class="container">
-    <nav>
-        <div class="nav-wrapper">
-            <a class="brand-logo">CodeCourses List</a>
-            <ul id="nav-mobile" class="left">
-                <li><a href="/">Home</a></li>
-            </ul>
-        </div>
-    </nav>
-</div>
-<div class="container">
-    <h2>What do you want to search?</h2>
 
-</div>
 <body>
-    <h2>Testing</h2>
+	<div class="container">
+		<nav>
+			<div class="nav-wrapper">
+				<a class="brand-logo">CodeCourses List</a>
+				<ul id="nav-mobile" class="left">
+					<li><a href="/">Home</a></li>
+				</ul>
+			</div>
+		</nav>
+	</div>
+	<div class="container">
+		<h2 style="text-align: center;">What do you want to search for on CodeCourses List?</h2>
+		<div class="row">
+			<div class="col s4">
+				<!-- Promo Content 1 goes here -->
+				<div class="center">
+					<i class="large material-icons" style="color: #EE6E73;">flash_on</i>
+					<p>Fast craigslist web scraper</p>
+					<p class="light center">
+						Scrape away right here with a beautiful GUI.
+					</p>
+				</div>
+			</div>
+			<div class="col s4">
+				<!-- Promo Content 2 goes here -->
+				<div class="center">
+					<i class="large material-icons" style="color: orange;">camera</i>
+					<p>Fast craigslist web scraper</p>
+					<p class="light center">Scrape away right here with a beautiful GUI.</p>
+				</div>
+			</div>
+			<div class="col s4">
+				<!-- Promo Content 3 goes here -->
+				<div class="center">
+					<i class="large material-icons" style="color: #22229bcc;">chrome_reader_mode</i>
+					<p>A much better front-end to Craiglist</p>
+					<p class="light center">We built this with 💜</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<!-- Compiled and minified JavaScript -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
 
 </html>
