--- a/codecourseslist/templates/base.html
+++ b/codecourseslist/templates/base.html
@@ -57,7 +57,21 @@
 				</div>
 			</div>
 		</div>
+
+		<h2>NEW SEARCH</h2>
+		<form action="{% url 'new_search' %}" method="POST">
+			{% csrf_token %}
+			<input type="text" name="search" placeholder="Search...">
+			<button class="btn waves-effect waves-light" type="submit" name="action">Submit
+				<i class="material-icons right">send</i>
+			</button>
+		</form>
+
+		{% block content %}
+
+		{% endblock content %}
 	</div>
+
 
 	<!-- Compiled and minified JavaScript -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
