--- a/codecourseslist/templates/codecoursesapp/new_search.html
+++ b/codecourseslist/templates/codecoursesapp/new_search.html
@@ -9,17 +9,21 @@
 
         {% for post in final_results %}
             <div class="col s4">
-                <div class="card">
+                <div class="card medium">
                     <div class="card-image">
-                        <a href="{{post.post_url}}"><img src="https://lorempixel.com/400/200/technics/1" alt="technics course">
+                        <a href="{{post.post_url}}">
+                            <img src="{% if post.post_image_url %}{{post.post_image_url}}{% else %}{% endif %}">
                         </a>
-                        
+
                     </div>
                     <div class="card-content">
                         <p>{{post.post_title}}</p>
                     </div>
                     <div class="card-action">
                         <a href="{{post.post_url}}">Link</a>
+                        {% if post.post_price != 'N/A' %}
+                            <p class="right">{{post.post_price}}</p>
+                        {% endif %}
                     </div>
                 </div>
             </div>
