--- a/codecourseslist/templates/base.html
+++ b/codecourseslist/templates/base.html
@@ -20,7 +20,7 @@
 	<div class="container">
 		<nav>
 			<div class="nav-wrapper">
-				<a class="brand-logo">CodeCourses List</a>
+				<a class="brand-logo center">CodeCourses List</a>
 				<ul id="nav-mobile" class="left">
 					<li><a href="/">Home</a></li>
 				</ul>
